--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,7 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.content %></p>
+<h3>Comments (<%= @post.comments.size %>)</h3>
+<%= render partial: 'posts/comment', collection: @post.comments.reverse %>
+<%= render partial: 'comments/form', post: @post %>
 <%= link_to "<< Back to Posts List", posts_path %> | <%= link_to "delete", post_path(@post), method: :delete, data: {confirm: "Really delete the post?"} %> | <%= link_to "edit", edit_post_path(@post) %>
 
