--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -5,6 +5,12 @@
     <%= f.label :body %><br/>
     <%= f.text_area :body %>
   </p>
+  <% if rate_not_exist? %>
+    <p>
+      <%= f.label :rate %>
+      <%= f.text_field :rate_value, placeholder: "Only numbers 1-5" %>
+    </p>
+  <% end %>
   <%= f.hidden_field :user_id, value: current_user.id %>
 
   <p>
