--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,5 +4,11 @@
 <h3>Comments (<%= @post.comments.size %>)</h3>
 <%= render partial: 'posts/comment', collection: @post.comments.reverse %>
 <%= render partial: 'comments/form', post: @post %>
-<%= link_to "<< Back to Posts List", posts_path %> | <%= link_to "delete", post_path(@post), method: :delete, data: {confirm: "Really delete the post?"} %> | <%= link_to "edit", edit_post_path(@post) %>
+<%= link_to "<< Back to Posts List", posts_path %>
+<% if can? :destroy, @post %>
+  | <%= link_to "delete", post_path(@post), method: :delete, data: {confirm: "Really delete the post?"} %>
+<% end %>
+<% if can? :update, @post %>
+ | <%= link_to "edit", edit_post_path(@post) %>
+<% end %>
 
