--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 <ul id="posts">
   <% @posts.each do |post| %>
     <li>
-      <%= link_to post.title, post_path(post) %>
+      <%= link_to post.title, post_path(post) %> Post rate <%= post.total_rate || 'is absent' %> Comments (<%= number_of_comments(post) %>)
     </li>
   <% end %>
 </ul>
