--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.content %></p>
-<h3>Rate of post <%= rate_exist? ? @rate : 'is absent' %> </h3>
-<h3>Comments (<%= @post.comments.size %>)</h3>
+<h3>Rate of post <%= rate_exist? ? @post.total_rate : 'is absent' %> </h3>
+<h3>Comments (<%= number_of_comments(@post) %>)</h3>
 <%= render partial: 'posts/comment', collection: @post.comments.reverse %>
 <%= render partial: 'comments/form', post: @post %>
 <%= link_to "<< Back to Posts List", posts_path %>
