--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -1,9 +1,19 @@
-<div>
-  <h4>Comment by <%= user_email(comment) %></h4>
-  <p class="comment"><%= comment.body %></p>
-  <% if can? :destroy, comment %>
-    <%= link_to "delete", post_comment_path(comment.post, comment), method: :delete, data: {confirm: "Really delete the comment?"} %>
-  <% end %>
-  <p> Rate of Post <%=comment.rate_value %></p>
-  <p>Posted <%= distance_of_time_in_words(comment.post.created_at, comment.created_at) %> later</p>
+<div class="card w-75">
+  <div class="card-body">
+    <h5 class="card-title">Comment by <%= user_email(comment) %></h5>
+    <p class="card-text"><%= comment.body %></p>
+    <small> Rate of Post <%=comment.rate_value %></small> |
+    <small>Posted <%= distance_of_time_in_words(comment.post.created_at, comment.created_at) %> later</small><br>
+    <% if can? :destroy, comment %>
+      <%= link_to "Delete", post_comment_path(comment.post, comment), method: :delete, data: {confirm: "Really delete the comment?"}, class: "btn btn-primary" %>
+    <% end %>
+  </div>
 </div>
+
+
+
+
+
+
+
+
