--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,21 +9,36 @@
   </head>
 
   <body>
-    <div id="nav">
-      <% if current_user %>
-        <%= link_to "Home", root_path %>
-        <%= link_to "Create Post", new_post_path %>
-        <%= link_to "Edit Profile", edit_user_path(current_user.id) %>
-        <%= link_to "Logout", :logout, method: :post %>
-      <% else %>
-        <%= link_to "Register", new_user_path %> |
-        <%= link_to "Login", :login %>
-        <%= link_to 'Login with Facebook', auth_at_provider_path(:provider => :facebook) %>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <%= link_to "CHATTER", root_path, class: "navbar-brand" %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <% if current_user %>
+            <%= link_to "Create Post", new_post_path, class: "nav-item nav-link" %>
+            <%= link_to "Edit Profile", edit_user_path(current_user.id), class: "nav-item nav-link" %>
+            <%= link_to "Logout", :logout, method: :post, class: "nav-item nav-link" %>
+          <% else %>
+            <%= link_to "Register", new_user_path, class: "nav-item nav-link" %>
+            <%= link_to "Login", :login, class: "nav-item nav-link" %>
+            <%= link_to 'Login with Facebook', auth_at_provider_path(:provider => :facebook), class: "nav-item nav-link" %>
+          <% end %>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container">
+      <% flash.each do |name, msg| %>
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+          <%= msg %>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
       <% end %>
+      <%= yield %>
     </div>
-    <div>
-      <p id="notice"><%= flash[:notice] %></p>
-    </div>
-    <%= yield %>
   </body>
 </html>
